--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@types/rellax": "^1.7.2",
+    "angular-rellax": "^0.1.3",
+    "lax.js": "^1.2.5",
+    "parallax-js": "^3.1.0",
+    "rellax": "^1.10.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
